--- a/app/App_Resources/Android/src/main/res/values-v21/styles.xml
+++ b/app/App_Resources/Android/src/main/res/values-v21/styles.xml
@@ -5,6 +5,7 @@
     <style name="AppTheme" parent="AppThemeBase">
         <item name="android:datePickerStyle">@style/SpinnerDatePicker</item>
         <item name="android:timePickerStyle">@style/SpinnerTimePicker</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <!-- Default style for DatePicker - in spinner mode -->
@@ -19,5 +20,6 @@
 
     <style name="NativeScriptToolbarStyle" parent="NativeScriptToolbarStyleBase">
         <item name="android:elevation">4dp</item>
+        <item name="android:paddingTop">24dp</item>
     </style>    
 </resources>
